RESOLVED FIXED91348
REGRESSION (tiled drawing): Page’s scroll bars flash with each character you type in a textarea (affects Wikipedia and YouTube)
https://bugs.webkit.org/show_bug.cgi?id=91348
Summary REGRESSION (tiled drawing): Page’s scroll bars flash with each character you ...
mitz
Reported 2012-07-15 12:12:10 PDT
<rdar://problem/11875795> When typing inside a textarea, the page’s main scroll bars flash with each character typed. To reproduce: 1. Navigate to the URL 2.Click inside the textarea and type With each character typed in the textarea, the page’s horizontal and vertical scrollbars flash.
Attachments
Return early from ScrollableArea::scrollPositionChanged() if the scroll position doesn’t change (1.58 KB, patch)
2012-07-15 12:16 PDT, mitz
no flags
Call notifyContentAreaScrolled() from scrollPositionChanged() only if the scroll position changes (3.13 KB, patch)
2012-08-04 22:32 PDT, mitz
aestes: review+
mitz
Comment 1 2012-07-15 12:16:28 PDT
Created attachment 152464 [details] Return early from ScrollableArea::scrollPositionChanged() if the scroll position doesn’t change
mitz
Comment 2 2012-07-15 13:16:04 PDT
Chris Dumez
Comment 3 2012-07-15 22:16:28 PDT
After this patch the following test started failing on EFL port: css3/flexbox/flexbox-overflow-auto.html http://build.webkit.org/results/EFL%20Linux%2064-bit%20Release/r122681%20(2660)/css3/flexbox/flexbox-overflow-auto-diffs.html The reason for the failure seems to be that some of the scrollbars are no longer positioned at the extremities.
Chris Dumez
Comment 4 2012-07-15 22:34:35 PDT
I filed Bug 91359 for the regression on EFL port.
mitz
Comment 5 2012-07-15 22:35:34 PDT
(In reply to comment #4) > I filed Bug 91359 for the regression on EFL port. Thank you. I can reproduce this in OS X as well if I disable overlay scroll bars.
Dominik Röttsches (drott)
Comment 6 2012-07-16 00:09:56 PDT
This causes the EFL and GTK Debug Bots to fail due to an assertion in ScrollableArea::scrollPosition() being hit, cmp. https://bugs.webkit.org/show_bug.cgi?id=91359#c4
WebKit Review Bot
Comment 7 2012-07-16 00:14:30 PDT
Re-opened since this is blocked by 91363
mitz
Comment 8 2012-08-04 22:32:15 PDT
Created attachment 156551 [details] Call notifyContentAreaScrolled() from scrollPositionChanged() only if the scroll position changes
mitz
Comment 9 2012-08-04 22:56:49 PDT
Note You need to log in before you can comment on or make changes to this bug.