<rdar://problem/11875795> REGRESSION (tiled drawing): Page’s scroll bars flash with each character you type in a textarea (affects Wikipedia and YouTube) https://bugs.webkit.org/show_bug.cgi?id=91348

Reviewed by Anders Carlsson.

* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::scrollPositionChanged): Added an early return if the scroll position
did not, in fact, change. This avoids the call to ScrollAnimator::notifyContentAreaScrolled,
which is what causes the scroll bars to flash.



Canonical link: https://commits.webkit.org/109153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122681 268f45cc-cd09-0410-ab3c-d52691b4dbfc