Source/WebCore/platform/ScrollableArea.cpp
@@ -142,8 +142,12 @@ void ScrollableArea::notifyScrollPositionChanged(const IntPoint& position)
 
 void ScrollableArea::scrollPositionChanged(const IntPoint& position)
 {
+    IntPoint oldPosition = scrollPosition();
     // Tell the derived class to scroll its contents.
     setScrollOffset(position);
+
+    if (scrollPosition() == oldPosition)
+        return;
 
     Scrollbar* verticalScrollbar = this->verticalScrollbar();
 
